<resources>

    <string name="app_name">OrderApp</string>
    <string name="name">AD</string>
    <string name="surname">SOYAD</string>
    <string name="email">E-MAİL</string>
    <string name="password">ŞİFRE</string>
    <string name="kayit_ol">Kayıt Ol</string>
    <string name="kvkk">KVKK Aydınlatma Metnini Okudum, Kabul Ediyorum.</string>
    <string name="profileFullName">Ad Soyad</string>
    <string name="profileUserMail">Kullananıcı Mail</string>
    <string name="product1_name">İskender</string>
    <string name="product2_name">Kebap</string>
    <string name="product1_features">Kuzu eti, domates sosu, pide ekmeği, tereyağı ve yoğurt</string>
    <string name="product2_features">Dana eti, lavaş, ayran kapya biber ve sarımsak</string>
    <string name="urun_fiyati_1">Küçük Pors.</string>
    <string name="urun_fiyati_2">Orta Pors.</string>
    <string name="urun_fiyati_3">Büyük Pors.</string>
    <string name="hesapla_button">HESAPLA</string>
    <string name="hosgeldiniz">hoşgeldiniz</string>


</resources>