<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">



       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:paddingLeft="20dp"
           android:paddingRight="20dp"
           >

           <TextView
               android:id="@+id/txtview_kayit_ol"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="50dp"
               android:layout_weight="1"
               android:gravity="center"
               android:maxLines="1"
               android:padding="10dp"
               android:text="@string/kayit_ol"
               android:background="@drawable/text_view_background"
               android:textColor="@color/black"
               android:textSize="28dp"
               android:textStyle="bold"
               android:textAllCaps="true"/>
           <EditText
               android:id="@+id/edt_name"
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:ems="10"
               android:drawableStart="@drawable/custom_user_icon"
               android:drawablePadding="12dp"
               android:paddingStart="12dp"
               android:layout_marginTop="20dp"
               android:paddingEnd="12dp"
               android:hint="@string/name"
               android:background="@drawable/custom_input"
               android:inputType="textPersonName"
               android:textSize="14sp"
               />
           <EditText
               android:id="@+id/edt_surname"
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:ems="10"
               android:drawableStart="@drawable/custom_user_icon"
               android:drawablePadding="12dp"
               android:paddingStart="12dp"
               android:layout_marginTop="20dp"
               android:paddingEnd="12dp"
               android:hint="@string/surname"
               android:background="@drawable/custom_input"
               android:inputType="textPersonName"
               android:textSize="14sp"
               />
           <EditText
               android:id="@+id/edt_email"
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:ems="10"
               android:drawableStart="@drawable/custom_email_icon"
               android:drawablePadding="12dp"
               android:paddingStart="12dp"
               android:layout_marginTop="20dp"
               android:paddingEnd="12dp"
               android:hint="@string/email"
               android:background="@drawable/custom_input"
               android:inputType="textEmailAddress"
               android:textSize="14sp"
               />
           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/til_pasword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:passwordToggleEnabled="true"
               app:passwordToggleTint="@color/button"
               >

               <EditText
                   android:id="@+id/edt_password"
                   android:layout_width="match_parent"
                   android:layout_height="60dp"
                   android:ems="10"
                   android:drawableStart="@drawable/custom_lock_icon"
                   android:drawablePadding="12dp"
                   android:paddingStart="12dp"
                   android:paddingEnd="12dp"
                   android:layout_marginTop="20dp"
                   android:hint="@string/password"
                   android:background="@drawable/custom_input"
                   android:inputType="numberPassword"
                   android:textSize="14sp" />
           </com.google.android.material.textfield.TextInputLayout>

           <CheckBox
               android:id="@+id/checkBox_kvkk"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:layout_marginTop="20dp"
               android:text="@string/kvkk" />

           <Button
               android:id="@+id/btn_kayitOl"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:layout_marginTop="20dp"
               android:padding="17dp"
               android:background="@drawable/custom_button"
               android:text="@string/kayit_ol"
               android:drawableStart="@drawable/ic_person_add"
               android:textAllCaps="true"
               android:textColor="@color/editTextColor"
               />
       </LinearLayout>




</LinearLayout>
